styles/style.css
/* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */

.page {
  /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
  font-family: var(--main-font);
  font-size: var(--main-font-size);
  font-weight: 400;
  line-height: 23.4px;
  color: var(--text-color);

  background-image: var(--background-img);
  background-attachment: fixed;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

.header {
  position: relative;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: 0 1fr minmax(min-content, max-content) 1fr 0;
  min-block-size: 100vh;
  padding: 20px;
}

.header__theme-menu-button_active {
  outline: 1px solid var(--nav-color);
  pointer-events: none;
}

.header__theme-menu-button:hover {
  outline: 1px solid var(--nav-hover-outline);
}

.header__theme-menu-button:focus {
  outline: none;
}

.header__theme-menu-button:focus-visible {
  border-bottom: 1px solid var(--nav-color);
}

.decorated-zone::before,
.decorated-zone::after {
  content: "";
  display: block;
  inline-size: 25px;
  block-size: 25px;
  border: 1px solid var(--decor-line-color);
}

.decorated-zone::before {
  grid-column-start: 2;
  justify-self: end;
  border-bottom: none;
  border-left: none;
}

.decorated-zone::after {
  align-self: end;
  border-top: none;
  border-right: none;
  grid-column: 1;
}

.header__theme-menu {
  grid-column: 1 / 3;
  justify-self: center;
}

.header__theme-menu-list {
  display: flex;
  gap: 10px;
}

.header__theme-menu-button {
  padding: 1.5px 13px;
  color: var(--nav-color);
  background-color: transparent;
  line-height: 18px;
  text-transform: lowercase;
  border: none;
  cursor: pointer;
}

.header__dark-theme_additional-text {
  position: absolute;
  top: 20px;
  right: 29px;
  display: flex;
  align-items: center;
  line-height: 25px;
  color: var(--accent-color);
}

.header__dark-theme_additional-text::after {
  content: "";
  display: inline-block;
  margin-left: 10px;
  inline-size: 9px;
  block-size: 9px;
  border-radius: 50%;
  background-color: var(--accent-color);
  box-shadow: 0px 0px 3px 3px #ff0070;
}

.header__title {
  grid-column: 1 / 3;
  margin-left: -20px;
}

.page-title {
  font-weight: 700;
  line-height: 82.5%;
  color: var(--title-color);
  text-shadow: 4px 4px 0 var(--accent-color);
}

.title-decor {
  background-color: var(--accent-color);
  color: var(--subtitle-color);
  font-weight: 700;
}

.header__description {
  grid-column: 2 / 3;
  align-self: center;
}

.main {
  display: flex;
  flex-direction: column;
  gap: 80px;
  margin: 60px 20px;
}

.content-section {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 20px;
}

.vertical-section {
  grid-template-rows: 1fr;
  row-gap: 20px;
}

.content-section__title {
  color: var(--section-title-color);
  font-size: inherit;
  font-weight: 700;
  line-height: 23.4px;
}

.content-section__text-block {
  grid-column: 2 / 4;
}

.content-section__list {
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.content-section__item-title {
  margin-bottom: 10px;
  font-size: inherit;
}

.content-section__block-title {
  margin-bottom: 0;
}

.row-text-section {
  grid-template-rows: min-content 1fr;
}

.content-section__text-block_row {
  grid-row-start: 2;
  grid-column-start: 1;
}

.content-section__list_row {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: 1fr;
}

.content-section__link {
  text-decoration: none;
  text-shadow: 2px 2px 0 var(--accent-color);
}

.content-section__link:hover {
  text-decoration: underline;
}

.content-section__link:focus {
  outline: none;
}

.content-section__link:focus-visible {
  outline: 1px solid var(--text-color);
}

.title-decor_thin {
  font-weight: 400;
}

.gallery-title {
  margin-bottom: 20px;
  font-size: inherit;
}

.gallery-container {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 20px;
}

.gallery__img {
  inline-size: 100%;
  block-size: 100%;
  object-fit: cover;
  object-position: center;
  display: block;
}

.gallery-container__item:first-child {
  grid-column: 1 / 3;
  grid-row: 1;
}

.gallery-container__item:nth-child(2) {
  grid-row: 1 / 3;
}

.gallery-container__item:nth-child(3) {
  grid-row: 2 / 4;
}

.gallery-container__item:nth-child(5) {
  grid-column: 2 / 4;
}

.footer {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 0 1fr 0;
  min-block-size: 100vh;
  padding: 20px;
}

.footer__text {
  grid-column: 1 / 3;
  align-self: center;
  justify-self: center;
}

@media (width >= 768px) {
  .page-title {
    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
  }
}

@media (width < 1024px) {
  .header__theme-menu {
    justify-self: end;
    align-self: center;
  }

  .header__theme-menu-list {
    flex-direction: column;
  }

  .content-section__list_row {
    grid-template-columns: 1fr;
  }

  .tips-section__item {
    word-spacing: 1px;
  }
}

@media (width < 768px) {
  .header {
    padding: 10px;
  }

  .header__dark-theme_additional-text {
    top: 10px;
    right: 19px;
  }

  .header__title {
    margin-left: 0;
  }

  .page-title {
    font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
  }

  .header__description {
    grid-column: 1 / 3;
  }

  .main {
    gap: 50px;
    margin: 40px 10px;
  }

  .content-section {
    grid-template-columns: repeat(1, 1fr);
  }

  .vertical-section {
    grid-template-rows: repeat(1, 1fr);
  }

  .content-section__text-block {
    grid-column: 1 / 2;
  }

  .gallery-title {
    margin-bottom: 10px;
  }

  .gallery-container {
    grid-template-columns: 1fr;
    gap: 10px;
  }

  .gallery-container__item:first-child {
    grid-column: 1 / -1;
    grid-row: 1 / 2;
  }

  .gallery-container__item:nth-child(2) {
    grid-column: 1 / -1;
    grid-row: 2 / 3;
  }

  .gallery-container__item:nth-child(3) {
    grid-column: 1 / -1;
    grid-row: 3 / 4;
  }

  .gallery-container__item:nth-child(4) {
    grid-column: 1 / -1;
    grid-row: 4 / 5;
  }

  .gallery-container__item:nth-child(5) {
    grid-column: 1 / -1;
    grid-row: 5 / 6;
  }

  .footer {
    padding: 10px;
  }
}

